# satpos

./: .gitignore  .gitmodules  10_01_2026_02_55.txt  10_01_2026_03_20.txt  10_01_2026_04_00.txt  12_01_2026_18_40.txt  CMakeLists.txt  README.md
cmake/: GRPC.cmake  Protobuf.cmake
include/satpos/api/v1/: sat.pb.go  sat.proto  sat_grpc.pb.go
src/: CMakeLists.txt  client.cpp  client.h  main.cpp  orbital_elements.cpp  orbital_elements.h  parse.cpp  parse.h  parse_tle.cpp  parse_tle.h  server.cpp  server.h  utils.cpp  utils.h
src/proto/: CMakeLists.txt
src/proto/api/v1/: sat.grpc.pb.cc  sat.grpc.pb.h  sat.pb.cc  sat.pb.h  sat.proto
src/proto/api/v2/: sat.grpc.pb.cc  sat.grpc.pb.h  sat.pb.cc  sat.pb.h  sat.proto
src/proto/api/v3/: sat.grpc.pb.cc  sat.grpc.pb.h  sat.pb.cc  sat.pb.h  sat.proto  satv2.proto
